2011-12-14 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-devel-generate-examples):
	Adjust template string text for output file.
	(epackage--layout-mapping): add 'ignore' entry.

2011-12-14 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-info-mode-map): Add
	`epackage-info-mode-cmd-email-upstream-ping'.
	(epackage--layout-mapping): Add examples.
	(epackage-devel-generate-examples): New.
	(epackage-devel-compose-package-dir): Use
	`epackage-devel-generate-examples'.
	(epackage-devel-generate-uninstall): New.
	(epackage-devel-information-date-versionstr): Correct
	call to `epackage-devel-information-version-main'.
	(epackage--directory-exclude-regexp): Add more directories.
	(epackage-files-recursive-lisp): Add argument EXCLUDE.
	(epackage-devel-generate-compile-main): Use
	'epackage--lisp-file-exclude-regexp'.
	(epackage--lisp-file-exclude-regexp): New.
	(epackage--layout-template-info): Move Vcs-Args.

2011-12-13 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--batch-ui-menu-string): Adjust wording.
	(epackage-files-recursive-lisp): Add TYPE argument.
	(epackage-devel-generate-compile-main): Correct file path
	names.

2011-12-13 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-princ): New.
	(epackage--princ-buffer): New.
	(epackage-ui-simple): New.
	(epackage-manager): New.
	(epackage--buffer-princ-default): New.
	(epackage--batch-ui-menu-help): Start output with newline.
	(epackage--batch-ui-menu-string): Start output with newline.
	(epackage--batch-ui-menu-header): Start output with newline.
	(epackage-batch-ui-simple-p): New.
	(epackage--batch-separator-insert): New.
	(epackage-batch-ui-menu-run): New.

2011-12-12 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--layout-template-compile): Check path.
	(epackage-byte-compile-package-run-file): Rename. Was
	`epackage-byte-compile-package-1'. Add argument checks.

2011-12-12 Mon  Jari Aalto  <jari.aalto@cante.net>
